--- a/1.14.0/nerdfunk-diode-nifi/pom.xml
+++ b/1.14.0/nerdfunk-diode-nifi/pom.xml
@@ -79,6 +79,11 @@
             <version>3.6</version>
         </dependency>
         <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>3.11.2</version>
